--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,9 +24,11 @@
 
     <!--  home fragment strings  -->
     <string name="current_balance">Current Balance</string>
-    <string name="balance">€0.0</string>
+    <string name="balance">Tap to set balance</string>
     <string name="month">{month}</string>
     <string name="add_transaction">Add Transaction</string>
+    <string name="to_spend">To Spend</string>
+    <string name="to_save">To Save</string>
 
     <!--  transaction fragment strings  -->
     <string name="currency">€</string>
@@ -43,17 +45,13 @@
     <string name="is_deposit">Deposit</string>
     <string name="is_withdrawal">Withdrawal</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <!--  tag fragment strings  -->
+    <string name="new_tag">Enter new tag</string>
+    <string name="tag_list">Tag List</string>
+    <string name="tag_item_name">Tag</string>
+    <string name="tag_insert_error">Please fill in a tag name before submitting!</string>
+    <string name="tag_update_error">You can\'t leave the tag name empty!</string>
 
-    <string-array name="planets_array">
-        <item>Mercury</item>
-        <item>Venus</item>
-        <item>Earth</item>
-        <item>Mars</item>
-        <item>Jupiter</item>
-        <item>Saturn</item>
-        <item>Uranus</item>
-        <item>Neptune</item>
-    </string-array>
+
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
