--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,10 @@
 
     <string name="next">Next</string>
     <string name="previous">Previous</string>
+    <string name="prompt_cancel">Cancel</string>
+    <string name="prompt_confirm">Confirm</string>
+    <string name="prompt_update">Update</string>
+    <string name="prompt_delete">Delete</string>
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
@@ -25,10 +29,14 @@
     <!--  home fragment strings  -->
     <string name="current_balance">Current Balance</string>
     <string name="balance">Tap to set balance</string>
+    <string name="calc_balance">€ 0.00</string>
     <string name="month">{month}</string>
     <string name="add_transaction">Add Transaction</string>
     <string name="to_spend">To Spend</string>
     <string name="to_save">To Save</string>
+    <string name="transaction_success">Transaction Success!</string>
+    <string name="account_balance_updated">Account balance updated!</string>
+    <string name="edit_your_balance">Edit your balance</string>
 
     <!--  transaction fragment strings  -->
     <string name="currency">€</string>
@@ -44,14 +52,16 @@
     <string name="save">Save</string>
     <string name="is_deposit">Deposit</string>
     <string name="is_withdrawal">Withdrawal</string>
+    <string name="transaction_fields_error">One of the fields contains a wrong value, please update the transaction</string>
 
     <!--  tag fragment strings  -->
     <string name="new_tag">Enter new tag</string>
     <string name="tag_list">Tag List</string>
     <string name="tag_item_name">Tag</string>
+    <string name="edit_tag">Edit Tag</string>
     <string name="tag_insert_error">Please fill in a tag name before submitting!</string>
     <string name="tag_update_error">You can\'t leave the tag name empty!</string>
-
+    <string name="tag_delete_confirm">Are you sure you want to delete this tag?</string>
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
